--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^1.4.1",
+    "@material-ui/icons": "^2.0.0",
     "axios": "^0.18.0",
     "immutability-helper": "^2.7.1",
     "react": "^16.4.1",
     "react-autosuggest": "^9.3.4",
     "react-dom": "^16.4.1",
     "react-scripts": "1.1.4",
+    "react-spring": "^5.4.4",
     "semantic-ui-css": "^2.3.3",
     "semantic-ui-react": "^0.82.1"
   },
