--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "lodash": "^4.17.10",
     "moment": "^2.22.2",
     "react": "^16.4.1",
+    "react-calendar": "^2.16.1",
     "react-dom": "^16.4.1",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
     "react-select": "^2.0.0",
     "react-spring": "^5.4.4",
