--- a/package.json
+++ b/package.json
@@ -50,9 +50,14 @@
     "react-calendar": "^2.16.1",
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.4.1",
+    "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-select": "^2.0.0",
     "react-spring": "^5.4.4",
+    "redux": "^4.0.0",
+    "redux-logger": "^3.0.6",
+    "redux-promise-middleware": "^5.1.1",
+    "redux-thunk": "^2.3.0",
     "resolve": "1.6.0",
     "semantic-ui": "^2.3.3",
     "semantic-ui-css": "^2.3.3",
