--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
   },
   "devDependencies": {
     "node-sass": "^4.9.3",
+    "redux-devtools-extension": "^2.13.5",
     "sass-loader": "^7.1.0"
   },
   "jest": {
