--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "raf": "3.4.0",
     "react": "^16.4.1",
     "react-calendar": "^2.16.1",
+    "react-cookie": "^3.0.4",
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.4.1",
     "react-redux": "^5.0.7",
