--- a/package.json
+++ b/package.json
@@ -56,7 +56,9 @@
     "react-select": "^2.0.0",
     "react-spring": "^5.4.4",
     "redux": "^4.0.0",
+    "redux-form": "^7.4.2",
     "redux-logger": "^3.0.6",
+    "redux-persist": "^5.10.0",
     "redux-promise-middleware": "^5.1.1",
     "redux-thunk": "^2.3.0",
     "resolve": "1.6.0",
